git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@4 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -8,5 +8,5 @@ Maintainer: Charles Marsh <charliem2003@gmail.com>
 Description: A set of functions that downscales species occupancy at
     coarse grain sizes to predict species occupancy at fine grain sizes.
 License: GPL-2
-Imports: minpack.lm, Rmpfr
+Imports: minpack.lm, Rmpfr, cubature
 LazyData: true
