--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: downscale
 Type: Package
 Title: Downscaling species occupancy
-Version: 0.3
-Date: 2014-11-28
+Version: 0.5
+Date: 2015-02-23
 Author: Charles Marsh [aut, cre]
 Maintainer: Charles Marsh <charliem2003@gmail.com>
 Description: A set of functions that downscales species occupancy at
@@ -18,7 +18,9 @@ Collate:
     'Downscale.R'
     'Downscaling_Functions.R'
     'OptimiseParameters.R'
+    'OptimiseParametersGNB.R'
     'OptimiseParametersFNB.R'
+    'OptimiseParametersLogis.R'
     'OptimiseParametersThomas.R'
     'PredictFunctions.R'
     'ResidFunctions.R'
