minpack.lm now as 'depends', spoccutils added to 'suggests'
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@29 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/DESCRIPTION
+++ b/pkg/downscale/DESCRIPTION
@@ -13,7 +13,7 @@ Imports:
     Rmpfr,
     cubature,
     sp
-Suggests: spocc
+Suggests: spocc, spoccutils
 LazyData: true
 Collate: 
     'DataInput.R'
