All packages as suggests
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@30 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/DESCRIPTION
+++ b/pkg/downscale/DESCRIPTION
@@ -8,8 +8,9 @@ Maintainer: Charles Marsh <charliem2003@gmail.com>
 Description: A set of functions that downscales species occupancy at
     coarse grain sizes to predict species occupancy at fine grain sizes.
 License: GPL-2
-Depends: raster, minpack.lm
 Imports: 
+    raster,
+    minpack.lm,
     Rmpfr,
     cubature,
     sp
