git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@31 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/DESCRIPTION
+++ b/pkg/downscale/DESCRIPTION
@@ -13,7 +13,8 @@ Imports:
     minpack.lm,
     Rmpfr,
     cubature,
-    sp
+    sp,
+    Rcpp
 Suggests: spocc, spoccutils
 LazyData: true
 Collate: 
