All packages as suggests
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@32 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/DESCRIPTION
+++ b/pkg/downscale/DESCRIPTION
@@ -12,9 +12,11 @@ Imports:
     raster,
     minpack.lm,
     Rmpfr,
-    cubature,
     sp,
-    Rcpp
+    Rcpp,
+    minpack.lm,
+    cubature,
+    gmp
 Suggests: spocc, spoccutils
 LazyData: true
 Collate: 
