git-svn-id: svn://svn.r-forge.r-project.org/svnroot/downscale@34 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/downscale/DESCRIPTION
+++ b/pkg/downscale/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
     Rcpp,
     minpack.lm,
     cubature,
-    gmp
+    gmp,
+    rgeos
 Suggests: spocc, spoccutils
 LazyData: true
 Collate: 
