--- a/pkg/downscale/DESCRIPTION
+++ b/pkg/downscale/DESCRIPTION
@@ -16,6 +16,7 @@ Imports:
     Rmpfr (>= 0.5-7),
     sp (>= 1.2-0)
 Suggests: 
+    rgeos,
     spocc (>= 0.4.0), 
     spoccutils (>= 0.1.0)
 LazyData: true
