--- a/pkg/downscale/NAMESPACE
+++ b/pkg/downscale/NAMESPACE
@@ -15,3 +15,7 @@ import(Rmpfr)
 import(cubature)
 import(sp)
 import(raster)
+importFrom("grDevices", "rgb")
+importFrom("graphics", "abline", "legend", "par", "points", "title")
+importFrom("methods", "getFunction")
+importFrom("stats", "coef", "uniroot")
