--- a/pkg/downscale/DESCRIPTION
+++ b/pkg/downscale/DESCRIPTION
@@ -22,8 +22,7 @@ Imports:
     stats
 Suggests: 
     rgeos,
-    spocc (>= 0.4.0), 
-    spoccutils (>= 0.1.0)
+    rgbif (>= 0.9.2), 
 LazyData: true
 Collate: 
     'DataInput.R'
