--- a/pkg/downscale/DESCRIPTION
+++ b/pkg/downscale/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: downscale
 Type: Package
 Title: Downscaling Species Occupancy
-Version: 1.1-0
-Date: 2016-02-25
+Version: 1.2-1
+Date: 2016-03-10
 Author: Charles Marsh [aut, cre]
 Maintainer: Charles Marsh <charliem2003@gmail.com>
 Description: A set of functions that downscales species occupancy at
@@ -20,11 +20,11 @@ Imports:
     Rmpfr (>= 0.5-7),
     sp (>= 1.2-0),
     stats
-Suggests: 
+Suggests:
     rgeos,
-    rgbif (>= 0.9.2), 
+    rgbif (>= 0.9.2),
 LazyData: true
-Collate: 
+Collate:
     'DataInput.R'
     'downscale.R'
     'OptimiseParameters.R'
@@ -43,3 +43,4 @@ Collate:
     'hui.downscale.R'
     'HuiFunctions.R'
     'upgrain.threshold.R'
+RoxygenNote: 5.0.1
