--- a/pkg/downscale/DESCRIPTION
+++ b/pkg/downscale/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Charles Marsh <charliem2003@gmail.com>
 Description: Downscales species occupancy at coarse grain sizes to predict 
 species occupancy at fine grain sizes. Ten models are provided to fit and 
 extrapolate the occupancy-area relationship, as well as methods for preparing 
-atlas data for modelling. See Marsh et. al. (2018) <doi:10.18637/jss.v086.c03>.
+atlas data for modelling. See Marsh et. al. (2018) doi:10.18637/jss.v086.c03.
 License: GPL-2
 Depends:
     raster (>= 2.4-20),
